# cis7000-multi-agent

./: README.md  ToM.py  data_handling.py  generate_ToM_ds.py  helpers.py  main.ipynb  main.py  modeling.R  openai_utils.py  pyproject.toml  scratch.ipynb  visual.py
archive/: main.py  scratch.ipynb
data/: results_ToM.csv  results_ToM.xlsx  results_ToM_ruben_original.xlsx
tables/: me_model_summary.tex  model_summary.tex
