[tool.poetry]
name = "cis7000-multi-agent"
version = "0.1.0"
description = ""
authors = ["Joseph Rudoler <40604402+jrudoler@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.54.3"
datasets = "^3.1.0"
transformers = "^4.46.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
ipykernel = "^6.29.5"
polars = "^1.12.0"
ipywidgets = "^8.1.5"
dask = {version = "^2024.11.2", extras = ["dataframe"]}
dask-jobqueue = "^0.9.0"
matplotlib = "^3.9.3"
bokeh = ">3.1.0"
joblib = "^1.4.2"
scipy = "^1.14.1"
ipympl = "^0.9.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
